refactor: tests refactor mapper: add SongDtoMapper, add SongEntityMapper